@@ -1,27 +1,22 @@
 # generated 2002/7/13 14:37:33 CEST by fabian@fabian.(none)
-# using glademm V0.5_11f
 #AUTOMAKE_OPTIONS = 1.4
-
 
 SUBDIRS = src doc macros
 
 ACLOCAL_AMFLAGS = -I macros
 
-EXTRA_WIN_DIST =  README.WIN32 INSTALL.WIN32 AUTHORS README COPYING
-
-EXTRA_DIST = $(EXTRA_WIN_DIST) \
-  ktoblzcheck.spec.in \
+EXTRA_DIST = \
+  README.WIN32 \
   ktoblzcheck.spec \
-  ktoblzcheck.vcproj \
-  ktoblzcheck.iss.in
+  ktoblzcheck.vcproj
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = $(PACKAGE).pc
 
 rpm:    $(PACKAGE).spec dist
 	rpmbuild="rpm" && \
 	if [ `rpm --version | awk '{ print $$3 }'` > /dev/null ]; then rpmbuild="rpmbuild"; fi && \
 	$$rpmbuild -ta $(PACKAGE)-$(VERSION).tar.gz
-
-dll: 
-	make -C src/lib dll
 
 srcdoc: Doxyfile 
 	make -C doc mainpage.doxygen
