@@ -95,7 +95,6 @@ AC_DEFINE_UNQUOTED(BANKDATA_PATH, "$BANKDATA_PATH", [Default path for bank data]
 #############################################################
 #
 # python
-AC_MSG_CHECKING(whether to install python-bindings)
 AC_ARG_ENABLE(python,
   [  --enable-python         install python bindings (default=no)],
   [ case "${enableval}" in
@@ -104,14 +103,18 @@ AC_ARG_ENABLE(python,
     *) AC_MSG_ERROR(bad value ${enableval} for --enable-python);;
     esac
   ],
-  enable_python="no")
+  enable_python="yes")
 
+# Check for python interpreter unless it is explicitly disabled
 if test "x$enable_python" = "xyes"; then
-  AC_MSG_RESULT(yes)
   # Make sure at least version 2.3 is available (otherwise ctypes
   # won't work)
-  AM_PATH_PYTHON( [2.3] )
+  AM_PATH_PYTHON( [2.3], [enable_python="yes"], [enable_python="no"] )
+fi
 
+AC_MSG_CHECKING(whether to install python-bindings)
+if test "x$enable_python" = "xyes"; then
+  AC_MSG_RESULT(yes)
   # Check for python ctypes module, otherwise terminate
   #AC_PYTHON_MODULE( [ctypes], [required] )
 else
@@ -135,6 +138,7 @@ AC_OUTPUT( \
   Doxyfile \
   ktoblzcheck.spec \
   ktoblzcheck.iss \
+  ktoblzcheck.pc \
   macros/Makefile \
   src/Makefile \
   src/bankdata/Makefile \
