@@ -1,0 +1,25 @@
+# pkg-config configuration for ktoblzcheck
+# For information about the syntax, see pkg-config(1)
+
+# General installation directories
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+datadir=@datadir@
+bindir=@bindir@
+
+# Particular variables of ktoblzcheck
+pkgdatadir=@datadir@/ktoblzcheck
+bankdatafile=@datadir@/ktoblzcheck/bankdata.txt
+pythondir=@pythondir@
+
+# Human-readable name
+Name: ktoblzcheck
+# Human-readable description
+Description: A library to check account numbers and bank codes of German banks.
+
+Version: @VERSION@
+Libs: -L@libdir@ -lktoblzcheck
+Cflags: -I@includedir@
+
